--- a/client/src/styles/var.css
+++ b/client/src/styles/var.css
@@ -1,8 +1,8 @@
 :root {
-  --text: #ebe9fc;
-  --text-shade: #929292;
-  --dark-text: #1a2035;
-  --background: #010104;
+  --text: #1a2035;
+  --text-shade: #333333;
+  --clear-text: #ebe9fc;
+  --background: #ebebeb;
   --primary: #51557e;
   --primary-shade: #404363;
   --secondary: #816797;
