--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -4,13 +4,15 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  margin: 250px 10px 100px 10px;
+  margin: 100px 60px 20px 50px;
   height: 400px;
-  width: 360px;
+  width: 250px;
   transform: scale(1);
   overflow: hidden;
-  background-color: rgba(65, 65, 65, 0.2);
-  border: 1px rgba(100, 100, 100, 0.3) solid;
+  background-color: #f0f0f0;
+  -webkit-box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
+  -moz-box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
+  box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
   border-radius: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,29 +20,42 @@
   transition: all 0.3s;
 }
 
+#gameLink {
+  height: 400px;
+  width: 250px;
+}
+
 .card_hovered {
-  transform: scale(1.01);
-  height: 500px;
+  transform: scale(1.02);
+  height: 420px;
   margin-bottom: 0;
 }
 
 .card_image {
-  height: 200px;
+  -webkit-user-drag: none;
+  transform: scale(1.08);
+  opacity: 0.9;
+  height: 190px;
   width: 100%;
   object-fit: cover;
+  transition: all 0.3s;
+  aspect-ratio: 3/2;
+}
+
+.image_hovered {
+  transform: scale(1.02);
+  opacity: 1;
 }
 
 .card_title {
   text-align: center;
-  transform: translateY(5vh);
   margin-bottom: 0;
   overflow: hidden;
   transition: all 0.2s;
 }
 
 .card_title_hover {
-  color: var(--text-shade);
-  transform: translateY(0);
+  color: var(--primary);
 }
 
 .card_description {
@@ -53,33 +68,6 @@
 hr {
   width: 90%;
   border: 1px solid var(--accent);
-}
-
-.card_container_buttons {
-  display: flex;
-  justify-content: space-around;
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
-
-.primary_button {
-  background-color: var(--primary);
-  transition: all 0.2s;
-}
-
-.primary_button:hover {
-  background-color: var(--primary-shade);
-  transform: scale(1.1);
-}
-
-.secondary_button {
-  background-color: var(--secondary);
-  transition: all 0.3s;
-}
-
-.secondary_button:hover {
-  background-color: var(--secondary-shade);
-  transform: scale(1.1);
 }
 
 .showGameInfo {
