--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -2,7 +2,33 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-left: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 10px 10px 250px;
+}
+
+.paginate {
+  width: 25px;
+  height: 25px;
+}
+
+@keyframes spinner {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+.loading::before {
+  animation: 1.5s linear infinite spinner;
+  animation-play-state: inherit;
+  border: solid 5px #cfd0d1;
+  border-bottom-color: var(--primary);
+  border-radius: 50%;
+  content: "";
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  will-change: transform;
 }
