--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,6 +1,8 @@
 .navContainer {
   position: relative;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  transform: translateY(150%);
+  top: 20%;
+  margin-left: 15%;
 }
