--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -19,7 +19,7 @@
   border: none;
   font-size: medium;
   background-color: rgb(31, 30, 30);
-  color: var(--text);
+  color: var(--clear-text);
   transition: all 0.3s;
 }
 
@@ -27,10 +27,11 @@
 .SearchBar:hover {
   outline: none;
   background-color: rgb(248, 248, 248);
-  color: var(--dark-text);
+  color: var(--text);
 }
 
 i {
+  color: var(--clear-text);
   position: absolute;
   right: 21%;
   transition: all 0.3s;
@@ -38,5 +39,5 @@ i {
 
 .SearchBar:hover + i,
 .SearchBar:focus + i {
-  color: var(--dark-text);
+  color: var(--text);
 }
