--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -74,3 +74,18 @@
   left: 50vw;
   will-change: transform;
 }
+
+.deleteButton {
+  width: 200px;
+  background-color: var(--background);
+  border: 2px solid rgb(200, 50, 50);
+  margin-bottom: 10px;
+  color: var(--text);
+  transition: all 0.3s;
+}
+
+.deleteButton:hover {
+  background-color: rgb(200, 50, 50);
+  border: 2px solid rgb(40, 40, 40);
+  color: var(--clear-text);
+}
