--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -9,10 +9,10 @@
   width: 250px;
   transform: scale(1);
   overflow: hidden;
-  background-color: #f0f0f0;
-  -webkit-box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
-  -moz-box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
-  box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
+  background-color: rgb(247, 239, 218);
+  -webkit-box-shadow: 0px 2px 6px 2px rgb(228, 220, 200);
+  -moz-box-shadow: 0px 2px 6px 2px rgb(228, 220, 200);
+  box-shadow: 0px 2px 6px 2px rgb(228, 220, 200);
   border-radius: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,6 +23,7 @@
 #gameLink {
   height: 400px;
   width: 250px;
+  cursor: default;
 }
 
 .card_hovered {
@@ -58,10 +59,6 @@
   transition: all 0.2s;
 }
 
-.card_title_hover {
-  color: var(--primary);
-}
-
 .card_description {
   margin-left: 10px;
   max-height: 145px;
@@ -84,7 +81,7 @@ hr {
 
 .api,
 .db {
-  color: var(--clear-text);
+  color: var(--text);
   position: absolute;
   z-index: 2;
   padding: 0 40px 0 40px;
