--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -22,10 +22,6 @@
   aspect-ratio: 16/9;
 }
 
-.gameId {
-  color: var(--text);
-}
-
 .gameInfo {
   display: flex;
   position: absolute;
@@ -43,13 +39,13 @@
 .highlight {
   width: fit-content;
   padding: 5px;
-  background-color: rgba(255, 255, 255, 0.623);
-  color: var(--primary);
+  background-color: rgba(255, 252, 230, 0.404);
+  color: var(--text);
   border-radius: 8px;
 }
 
 .title {
-  color: var(--secondary);
+  color: var(--text-shade);
 }
 
 @keyframes spinner {
@@ -64,7 +60,7 @@
   animation: 1.5s linear infinite spinner;
   animation-play-state: inherit;
   border: solid 5px #cfd0d1;
-  border-bottom-color: var(--primary);
+  border-bottom-color: var(--text);
   border-radius: 50%;
   content: "";
   height: 40px;
