--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -18,15 +18,14 @@
   border-radius: 40px;
   border: none;
   font-size: medium;
-  background-color: rgb(31, 30, 30);
-  color: var(--clear-text);
+  background-color: #d8ccaf;
   transition: all 0.3s;
 }
 
 .SearchBar:focus,
 .SearchBar:hover {
   outline: none;
-  background-color: rgb(248, 248, 248);
+  background-color: #f0e3c5;
   color: var(--text);
 }
 
