--- a/client/src/components/SideBar/SideBar.module.css
+++ b/client/src/components/SideBar/SideBar.module.css
@@ -12,7 +12,7 @@
   max-width: 100vh;
   width: 17%;
   height: 100%;
-  background-color: #f0f0f0;
+  background-color: #f8efd9;
   box-shadow: 0px 2px 6px 2px rgba(199, 199, 199, 1);
 }
 
@@ -29,7 +29,7 @@
 
 #Link:hover {
   transform: translateY(-10px);
-  box-shadow: 0px 2px 3px 0px rgba(116, 60, 153, 0.75);
+  box-shadow: 0px 2px 3px 0px rgba(125, 129, 83, 0.75);
   border-radius: 8%;
 }
 
@@ -45,15 +45,15 @@
   padding: 10px;
   margin-top: 20px;
   width: 130px;
-  background: #e0e0e0;
+  background: #e9e1cd;
   border-radius: 4px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #c0bebe;
   transition: all 0.3s;
 }
 
 .select:hover {
   cursor: pointer;
-  border: 1px solid var(--primary);
+  border: 1px solid var(--text);
 }
 
 .cleanFilters {
@@ -66,7 +66,6 @@
 }
 
 .cleanFilters:hover {
-  color: var(--clear-text);
   border: 2px solid #252525;
-  background-color: var(--primary);
+  background-color: var(--secondary);
 }
