--- a/client/src/components/Title/Title.module.css
+++ b/client/src/components/Title/Title.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap");
+@import url(../../styles/var.css);
 
 #Title {
   font-family: "Jacquarda Bastarda 9", serif;
@@ -6,4 +7,9 @@
   font-style: normal;
   font-size: 3em;
   transform: translateX(-10%);
+}
+
+.icon {
+  color: var(--primary);
+  transform: translate(-450%, 10%);
 }
