--- a/client/src/styles/var.css
+++ b/client/src/styles/var.css
@@ -2,10 +2,8 @@
   --text: #1a2035;
   --text-shade: #333333;
   --clear-text: #ebe9fc;
-  --background: #ebebeb;
-  --primary: #51557e;
-  --primary-shade: #404363;
-  --secondary: #816797;
-  --secondary-shade: #675379;
+  --background: #f7efda;
+  --primary: #d4caac;
+  --secondary: #e7ddc2;
   --accent: #dbdaa6;
 }
