fixed styling, reactive form

--- a/client/src/components/CreateForm/CreateForm.module.css
+++ b/client/src/components/CreateForm/CreateForm.module.css
@@ -60,6 +60,12 @@
 
 .checkbox {
   display: flex;
+  align-content: center;
   flex-wrap: wrap;
   height: 450px;
+  left: 0;
+}
+
+.checkbox > p {
+  transform: translate(-250px, 50px);
 }
